Fix build with JDK 11
Stream.toList() was only added in JDK 16, so instead use
"collect(Collectors.toList())"